appId: com.colota
---
- launchApp
- waitForAnimationToEnd
- tapOn: "Settings"
- waitForAnimationToEnd
- scrollUntilVisible:
    element: "Authentication & Headers"
    direction: DOWN
- tapOn: "Authentication & Headers"
- waitForAnimationToEnd
- takeScreenshot: Authentication
