appId: com.colota
---
- launchApp
- waitForAnimationToEnd
- tapOn: "Settings"
- waitForAnimationToEnd
- scrollUntilVisible:
    element: "Dark Mode"
    direction: DOWN
- tapOn: "Dark Mode"
- waitForAnimationToEnd
- takeScreenshot: DarkMode
- tapOn: "Dark Mode"
